--- a/index.html
+++ b/index.html
@@ -112,13 +112,78 @@
     // Minimal quote generator logic
     (function(){
       const quotes = [
-        {t: 'Creativity is intelligence having fun.', a: 'Albert Einstein'},
-        {t: 'Simplicity is the soul of efficiency.', a: 'Austin Freeman'},
-        {t: 'Code is like humor. When you have to explain it, it’s bad.', a: 'Cory House'},
-        {t: 'First, solve the problem. Then, write the code.', a: 'John Johnson'},
-        {t: 'Programmer: an organism that turns caffeine into software.', a: 'Unknown'},
-        {t: 'Make it work, make it right, make it fast.', a: 'Kent Beck'}
-      ];
+         { t: 'Creativity is intelligence having fun.', a: 'Albert Einstein' },
+         { t: 'Design is not just what it looks like and feels like. Design is how it works.', a: 'Steve Jobs' },
+         { t: 'Simplicity is the ultimate sophistication.', a: 'Leonardo da Vinci' },
+         { t: 'Make it simple, but significant.', a: 'Don Draper' },
+         { t: 'Good design is obvious. Great design is transparent.', a: 'Joe Sparano' },
+         { t: 'Creativity takes courage.', a: 'Henri Matisse' },
+         { t: 'The details are not the details. They make the design.', a: 'Charles Eames' },
+         { t: 'Design adds value faster than it adds costs.', a: 'Joel Spolsky' },
+         { t: 'Innovation distinguishes between a leader and a follower.', a: 'Steve Jobs' },
+         { t: 'A designer knows he has achieved perfection not when there is nothing left to add, but when there is nothing left to take away.', a: 'Antoine de Saint-Exupéry' },
+         { t: 'Style is a way to say who you are without having to speak.', a: 'Rachel Zoe' },
+         { t: 'Functionality without aesthetics is soulless.', a: 'MT' },
+         { t: 'Design is the silent ambassador of your brand.', a: 'Paul Rand' },
+         { t: 'Creativity doesn’t wait for that perfect moment. It fashions its own perfect moments out of ordinary ones.', a: 'Bruce Garrabrandt' },
+         { t: 'Design is thinking made visual.', a: 'Saul Bass' },
+         { t: 'Art is the most beautiful of all lies.', a: 'Claude Debussy' },
+         { t: 'Whitespace is like air: it is necessary for design to breathe.', a: 'Wojciech Zieliński' },
+         { t: 'Every great design begins with an even better story.', a: 'Lorinda Mamo' },
+         { t: 'Creativity is nothing but a mind set free.', a: 'Torrie T. Asai' },
+         { t: 'Design is intelligence made visible.', a: 'Alina Wheeler' },
+         { t: 'Design is where science and art break even.', a: 'Robin Mathew' },
+         { t: 'If you think good design is expensive, you should look at the cost of bad design.', a: 'Ralf Speth' },
+         { t: 'Design is the intermediary between information and understanding.', a: 'Hans Hoffman' },
+         { t: 'A brand is no longer what we tell the consumer it is—it is what consumers tell each other it is.', a: 'Scott Cook' },
+         { t: 'Creativity is contagious. Pass it on.', a: 'Albert Einstein' },
+         { t: 'Design is a response to social change.', a: 'George Nelson' },
+         { t: 'Design must reflect the practical and aesthetic in business but above all... good design must primarily serve people.', a: 'Thomas J. Watson' },
+         { t: 'Design is not for philosophy—it’s for life.', a: 'Issey Miyake' },
+         { t: 'The best ideas emerge from constraint.', a: 'MT' },
+         { t: 'Design is the art of gradually applying constraints until only the essential remains.', a: 'MT' },
+         { t: 'Creativity begins where logic ends.', a: 'MT' },
+         { t: 'Design is the bridge between chaos and clarity.', a: 'MT' },
+         { t: 'A logo doesn’t sell, it identifies.', a: 'Paul Rand' },
+         { t: 'Design is the silent strength behind every great product.', a: 'MT' },
+         { t: 'The best way to predict the future is to create it.', a: 'Peter Drucker' },
+         { t: 'Design is not just solving problems—it’s shaping perception.', a: 'MT' },
+         { t: 'Creativity is the power to connect the seemingly unconnected.', a: 'William Plomer' },
+         { t: 'Design is about making things good (and then better) and right (and fantastic) for the people who use them.', a: 'Matt Beale' },
+         { t: 'Design is the conscious effort to impose a meaningful order.', a: 'Victor Papanek' },
+         { t: 'Design is the contrast between content and chaos.', a: 'MT' },
+         { t: 'Creativity is seeing what everyone else has seen, and thinking what no one else has thought.', a: 'Albert Szent-Györgyi' },
+         { t: 'Design is the art of making the invisible visible.', a: 'MT' },
+         { t: 'The role of the designer is that of a good, thoughtful host anticipating the needs of his guests.', a: 'Charles Eames' },
+         { t: 'Design is not a thing you do. It’s a way of life.', a: 'Alan Fletcher' },
+         { t: 'Creativity is the soul of innovation.', a: 'MT' },
+         { t: 'Design is the difference between a product and a brand.', a: 'MT' },
+         { t: 'Design is the art of making things look easy.', a: 'MT' },
+         { t: 'Creativity is the fuel. Design is the engine.', a: 'MT' },
+         { t: 'Design is the visual language of strategy.', a: 'MT' },
+         { t: 'Creativity is the spark. Execution is the fire.', a: 'MT' },
+         { t: 'Design is the fingerprint of intention.', a: 'MT' },
+         { t: 'Creativity is the rebellion against the ordinary.', a: 'MT' },
+         { t: 'Design is the harmony between form and function.', a: 'MT' },
+         { t: 'Creativity is the art of turning limitations into style.', a: 'MT' },
+         { t: 'Design is the choreography of experience.', a: 'MT' },
+         { t: 'Creativity is the courage to let go of certainty.', a: 'Erich Fromm' },
+         { t: 'Design is the story you tell without words.', a: 'MT' },
+         { t: 'Creativity is the antidote to mediocrity.', a: 'MT' },
+         { t: 'Design is the echo of purpose.', a: 'MT' },
+         { t: 'Creativity is the art of asking better questions.', a: 'MT' },
+         { t: 'Design is the rhythm of relevance.', a: 'MT' },
+         { t: 'Creativity is the refusal to be bored.', a: 'MT' },
+         { t: 'Design is the poetry of precision.', a: 'MT' },
+         { t: 'Creativity is the discipline of dreaming.', a: 'MT' },
+         { t: 'Design is the architecture of emotion.', a: 'MT' },
+         { t: 'Creativity is the lens that sharpens vision.', a: 'MT' },
+         { t: 'Design is the compass of clarity.', a: 'MT' },
+         { t: 'Creativity is the art of making the complex feel simple.', a: 'MT' },
+         { t: 'Design is the signature of excellence.', a: 'MT' },
+         { t: 'Creativity is the heartbeat of progress.', a: 'MT' },
+         { t: 'Design is the interface between imagination and reality.', a: 'MT' }
+       ];
 
       const quoteText = document.getElementById('quoteText');
       const quoteAuthor = document.getElementById('quoteAuthor');
