--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>qoute · VoltEdge Builds</title>
-  <meta name="description" content="Simple, responsive quote generator for qoute.voltedgebuilds.com" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+    <title>VoltEdge Quote Generator: Daily Quotes & Custom Cards</title>
+    <meta name="description" content="A simple, mobile-friendly quote generator from VoltEdge. Get inspired with daily quotes, create your own custom quote cards, and share them on social media.">
+    <meta name="keywords" content="quote generator, daily quotes, custom quotes, shareable quotes, inspiration, motivation, web app, VoltEdge">
+    <meta name="author" content="VoltEdge Builds">
+
+    <meta property="og:title" content="VoltEdge Quote Generator: Your Source for Daily Inspiration">
+    <meta property="og:description" content="Generate and share beautiful quotes with this simple web tool. Perfect for quick inspiration and creating custom quote cards.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://voltedgebuilds.github.io/quotes">
+    <meta property="og:image" content="https://voltedgebuilds.github.io/img/logo.webp">
+    <meta property="og:image:alt" content="A visual preview of the VoltEdge Quote Generator interface with a quote card.">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Find Your Inspiration with the VoltEdge Quote Generator">
+    <meta name="twitter:description" content="Need a daily dose of motivation? Use this clean and simple quote generator to find inspiring quotes and share them instantly.">
+    <meta name="twitter:image" content="https://voltedgebuilds.github.io/img/logo.webp">
+
+    <link rel="canonical" href="https://voltedgebuilds.github.io/qoutes">
+
+    <link rel="icon" type="image/x-icon" href="/path/to/favicon.ico">
   <style>
     :root{--bg:#0f1724;--card:#0b1220;--muted:#9aa4b2;--accent:#6ee7b7}
     *{box-sizing:border-box}
