--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>VoltEdge Quote Generator: Daily Quotes & Custom Cards</title>
-    <meta name="description" content="A simple, mobile-friendly quote generator from VoltEdge. Get inspired with daily quotes, create your own custom quote cards, and share them on social media.">
-    <meta name="keywords" content="quote generator, daily quotes, custom quotes, shareable quotes, inspiration, motivation, web app, VoltEdge">
-    <meta name="author" content="VoltEdge Builds">
+    <title>VoltNexis Quote Generator: Daily Quotes & Custom Cards</title>
+    <meta name="description" content="A simple, mobile-friendly quote generator from VoltNexis. Get inspired with daily quotes, create your own custom quote cards, and share them on social media.">
+    <meta name="keywords" content="quote generator, daily quotes, custom quotes, shareable quotes, inspiration, motivation, web app, VoltNexis">
+    <meta name="author" content="VoltNexis">
 
-    <meta property="og:title" content="VoltEdge Quote Generator: Your Source for Daily Inspiration">
+    <meta property="og:title" content="VoltNexis Quote Generator: Your Source for Daily Inspiration">
     <meta property="og:description" content="Generate and share beautiful quotes with this simple web tool. Perfect for quick inspiration and creating custom quote cards.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://voltedgebuilds.github.io/quotes">
-    <meta property="og:image" content="https://voltedgebuilds.github.io/img/logo.webp">
-    <meta property="og:image:alt" content="A visual preview of the VoltEdge Quote Generator interface with a quote card.">
+    <meta property="og:url" content="https://voltnexis.github.io/quotes">
+    <meta property="og:image" content="https://voltnexis.github.io/img/logo.webp">
+    <meta property="og:image:alt" content="A visual preview of the VoltNexis Quote Generator interface with a quote card.">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Find Your Inspiration with the VoltEdge Quote Generator">
+    <meta name="twitter:title" content="Find Your Inspiration with the VoltNexis Quote Generator">
     <meta name="twitter:description" content="Need a daily dose of motivation? Use this clean and simple quote generator to find inspiring quotes and share them instantly.">
-    <meta name="twitter:image" content="https://voltedgebuilds.github.io/img/logo.webp">
+    <meta name="twitter:image" content="https://voltnexis.github.io/img/logo.webp">
 
-    <link rel="canonical" href="https://voltedgebuilds.github.io/qoutes">
+    <link rel="canonical" href="https://voltnexis.github.io/qoutes">
 
     <link rel="icon" type="image/x-icon" href="/path/to/favicon.ico">
   <style>
@@ -72,7 +72,7 @@
       <div class="brand">
         <div class="logo">V</div>
         <div>
-          <div class="title">qoute · VoltEdge Builds</div>
+          <div class="title">qoute · VoltNexis</div>
           <div class="subtitle">fast, simple quote cards — mobile friendly</div>
         </div>
       </div>
