--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <meta property="og:description" content="Generate and share beautiful quotes with this simple web tool. Perfect for quick inspiration and creating custom quote cards.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://voltnexis.github.io/quotes">
-    <meta property="og:image" content="https://voltnexis.github.io/img/logo.webp">
+    <meta property="og:image" content="https://voltnexis.github.io/qoutes/qoutes.webp">
     <meta property="og:image:alt" content="A visual preview of the VoltNexis Quote Generator interface with a quote card.">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Find Your Inspiration with the VoltNexis Quote Generator">
     <meta name="twitter:description" content="Need a daily dose of motivation? Use this clean and simple quote generator to find inspiring quotes and share them instantly.">
-    <meta name="twitter:image" content="https://voltnexis.github.io/img/logo.webp">
+    <meta name="twitter:image" content="https://voltnexis.github.io/qoutes/qoutes.webp">
 
     <link rel="canonical" href="https://voltnexis.github.io/qoutes">
 
