--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <div class="logo">V</div>
+        <div class="logo"><img src="qoutes-fix.webp"></div>
         <div>
           <div class="title">qoute · VoltNexis</div>
           <div class="subtitle">fast, simple quote cards — mobile friendly</div>
